--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@
   bottom: 0;
   right: 0;
   height: 100vh;
-  background-color: #1e1c3681;
+  background-color: #1e1c36a4;
   transition: 0.3s;
 }
 
@@ -184,14 +184,17 @@
   position: fixed;
   background-color: #204255;
   border-radius: 5vw;
+  opacity: 0;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
   width: 85%;
+  max-width: 500px;
   transition: 0.3s;
 }
 
 .modal.active{
+  opacity: 1;
   transform: translate(-50%, -50%) scale(1);
 }
 
@@ -228,6 +231,7 @@
 
 .modal-footer{
   margin: 0 auto;
+  margin-bottom: 2rem;
 }
 
 .btn-form{
