User experience update
Addition of fade in effect to give time to load the api data

--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@
   color: aliceblue;
 }
 
+.main-main{
+  opacity: 0;
+  transition: 2s;
+}
+
+.main-main.active{
+  opacity: 1;
+}
+
 .main{
   background-color: #081B24;
   position: absolute;
